  . Invalid octal literals in source code now produce compile errors, fixes PHPSadness #31. (Andrea)
  . Removed dl() function on fpm-fcgi. (Nikita)
  . Removed support for hexadecimal numeric strings. (Nikita)
  . Removed obsolete extensions and SAPIs. See the full list in UPGRADING. (Anatol)
  . Added NULL byte protection to exec, system and passthru. (Yasuo)

- Curl:
  . Fixed bug #68937 (Segfault in curl_multi_exec). (Laruence)

- Date:
  . Fixed day_of_week function as it could sometimes return negative values
    internally. (Derick)
  . Removed $is_dst parameter from mktime() and gmmktime(). (Nikita)

- DBA:
  . Fixed bug #62490 (dba_delete returns true on missing item (inifile)). (Mike)
  . Fixed bug #68711 (useless comparisons). (bugreports at internot dot info)

- DOM:
  . Made DOMNode::textContent writeable. (Tjerk)

- GD:
  . Made fontFetch's path parser thread-safe. (Sara)

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)

- Filter:
  . New FILTER_VALIDATE_DOMAIN and better RFC conformance for FILTER_VALIDATE_URL. (Kevin Dunglas)

- FPM:
  . Fixed bug #68945 (Unknown admin values segfault pools) (Laruence)
  . Fixed bug #65933 (Cannot specify config lines longer than 1024 bytes). (Chris Wright)
  . Implement request #67106 (Split main fpm config). (Elan Ruusamäe, Remi)

- JSON
  . Replace non-free JSON parser with a parser from Jsond extension, fixes #63520
    (JSON extension includes a problematic license statement). (Jakub Zelenka)
  . Fixed bug #68938 (json_decode() decodes empty string without error).
    (jeremy at bat-country dot us)

- LiteSpeed:
  . Updated LiteSpeed SAPI code from V5.5 to V6.6. (George Wang)

- Mcrypt:
  . Fixed possible read after end of buffer and use after free. (Dmitry)

- Opcache:
  . Fixed bug with try blocks being removed when extended_info opcode
    generation is turned on. (Laruence)
  . Fixed bug #68644 (strlen incorrect : mbstring + func_overload=2 +UTF-8
    + Opcache). (Laruence)
