@@ -320,6 +320,22 @@ Relevant RFCs:
 * https://wiki.php.net/rfc/remove_hex_support_in_numeric_strings
 * https://wiki.php.net/rfc/unicode_escape
 
+Changes to object comparison behaviour
+--------------------------------------
+
+* Classes may now implement a Comparable interface to override how objects are
+  compared to other values. If implemented, the class must implement a public
+  compareTo() method with the signature:
+
+      public function compareTo($other)
+
+  This method must return a negative integer to signal that the object is less
+  than $other, zero to signal that the object is equal to $other, or a positive
+  integer to signal that the object is greater than $other.
+
+  Objects that don't implement Comparable will continue to be compared
+  according to the rules used in PHP 5.
+
 Other language changes
 ----------------------
 
@@ -439,6 +455,9 @@ Other
 7. New Classes and Interfaces
 ========================================
 
+- Core:
+  . Added a Comparable interface (see "Changes to object comparison behaviour"
+    above).
 
 ========================================
 8. Removed Extensions and SAPIs
