@@ -28,6 +28,7 @@ ZEND_API zend_class_entry *zend_ce_aggregate;
 ZEND_API zend_class_entry *zend_ce_iterator;
 ZEND_API zend_class_entry *zend_ce_arrayaccess;
 ZEND_API zend_class_entry *zend_ce_serializable;
+ZEND_API zend_class_entry *zend_ce_comparable;
 
 /* {{{ zend_call_method
  Only returns the returned zval if retval_ptr != NULL */
@@ -496,6 +497,13 @@ static int zend_implement_serializable(zend_class_entry *interface, zend_class_e
 }
 /* }}}*/
 
+/* {{{ zend_implement_comparable */
+static int zend_implement_comparable(zend_class_entry *interface, zend_class_entry *class_type)
+{
+	return SUCCESS;
+}
+/* }}}*/
+
 /* {{{ function tables */
 const zend_function_entry zend_funcs_aggregate[] = {
 	ZEND_ABSTRACT_ME(iterator, getIterator, NULL)
@@ -543,6 +551,15 @@ const zend_function_entry zend_funcs_serializable[] = {
 	ZEND_FENTRY(unserialize, NULL, arginfo_serializable_serialize, ZEND_ACC_PUBLIC|ZEND_ACC_ABSTRACT|ZEND_ACC_CTOR)
 	ZEND_FE_END
 };
+
+ZEND_BEGIN_ARG_INFO_EX(arginfo_comparable_compareTo, 0, 0, 1)
+	ZEND_ARG_INFO(0, other)
+ZEND_END_ARG_INFO()
+
+const zend_function_entry zend_funcs_comparable[] = {
+	ZEND_ABSTRACT_ME(comparable, compareTo, arginfo_comparable_compareTo)
+	ZEND_FE_END
+};
 /* }}} */
 
 #define REGISTER_ITERATOR_INTERFACE(class_name, class_name_str) \
@@ -570,6 +587,7 @@ ZEND_API void zend_register_interfaces(void)
 	REGISTER_ITERATOR_INTERFACE(arrayaccess, ArrayAccess);
 
 	REGISTER_ITERATOR_INTERFACE(serializable, Serializable)
+	REGISTER_ITERATOR_INTERFACE(comparable,   Comparable)
 }
 /* }}} */
 
